# lite-grad-scheduler

./: .gitignore  README.md  demo.py  pyproject.toml
migrations/: 001_add_course_metadata.py
src/scheduler/: __init__.py
src/scheduler/api/: main.py
src/scheduler/api/routes/: __init__.py  auth.py  courses.py
src/scheduler/db/: __init__.py  repository.py
src/scheduler/domain/: __init__.py  models.py
src/scheduler/services/: __init__.py  conflict_detector.py  excel_exporter.py  pdf_exporter.py  schedule_generator.py  security.py
static/: app.js  index.html  style.css
tests/: __init__.py  conftest.py
tests/integration/: test_api.py  test_api_schedule_views.py  test_auth.py
tests/unit/: test_conflict_detector.py  test_repository.py  test_schedule_generator.py  test_security.py
